Add SSO access requests and commit completed security hardening work.
Includes JWT revocation, login rate limiting, HttpOnly cookies, WebSocket auth, log redaction, re-encrypt secrets, alert hooks, migrations, docs, and gitignore updates for logs/temp artifacts. Confluence upload script reads CONFLUENCE_TOKEN from env only.

Co-authored-by: Cursor <cursoragent@cursor.com>